fixed issue with navbar on the search page and removed some styling
I had an issue with the navbar not aligning correctly ... thats resolved.

I also removed some styling that i dont need .

--- a/css/search.css
+++ b/css/search.css
@@ -1,3 +1,4 @@
+
 * {
     box-sizing: border-box;
 }
@@ -5,7 +6,6 @@
 :root {
     --primary-color: #141414;
     --secondary-color: red;
-
 }
 
 body {
@@ -13,7 +13,7 @@ body {
     background-color: #141414;
     font-family: 'Roboto', sans-serif, Helvetica;
     margin: 0;
-
+    position: relative;
 }
 
 header {
@@ -180,7 +180,6 @@ a:active {
     text-decoration: none;
 }
 
-
 .netflix-dropdown-box .dropdown-menu {
     background-color: rgba(0, 0, 0, 0.796);
     font-size: 9px !important;
@@ -236,5 +235,5 @@ i {
 }
 
 #search {
-    height: 40px;
+    height: 30px;
 }
